# NeuralNetworks_CPP

./: CMakeLists.txt  README.md
NeuralNetworks/: Bias.h  Instance.h  InstanceList.h  Layer.h  NeuralNetwork.h  Neuron.h
NeuralNetworks/ActivationFunctions/: Activation.h  ActivationFunction.h  Linear.h  ReLU.h  Sigmoid.h  TanH.h
Test/: NeuralNetworkTest.cpp  catch.hpp
